--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,94 +10,79 @@ const { title } = Astro.props;
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
-    <link rel="icon" type="image/svg+xml" href="/icon.svg">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="mask-icon" href="/icon.svg" color="#FFFFFF">
-    <meta name="theme-color" content="#212129">
-    <meta name="generator" content={Astro.generator}>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link rel="mask-icon" href="/icon.svg" color="#FFFFFF" />
+    <meta name="theme-color" content="#212129" />
+    <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="" />
     <title>{title}</title>
-    <meta name="description" content="A simple blog">
+    <meta name="description" content="A simple blog" />
     {
       import.meta.env.HEAD_SCRIPTS
         ? (
-        <Fragment set:html={import.meta.env.HEAD_SCRIPTS } />
+        <Fragment set:html={import.meta.env.HEAD_SCRIPTS} />
           )
         : null
     }
     <!-- netlify-disable-blocks -->
     {
       import.meta.env.PROD && (
-         <script is:inline src="/registerSW.js"></script>
-         <link rel="manifest" href="/manifest.webmanifest" />
+        <>
+          <script is:inline src="/registerSW.js" />
+          <link rel="manifest" href="/manifest.webmanifest" />
+        </>
       )
     }
     <!-- netlify-disable-end -->
   </head>
-  <body>
+  <body class="bg-base fg-base">
     <slot />
   </body>
 </html>
 
 <style is:global>
   :root {
-    --c-bg: #fbfbfb;
-    --c-fg: #444444;
     --c-scroll: #d9d9d9;
     --c-scroll-hover: #bbbbbb;
-    scrollbar-color: var(--c-scrollbar) var(--c-bg);
+    --c-shadow: #00000008;
   }
-
-  html {
-    font-family: system-ui, sans-serif;
-    background-color: var(--c-bg);
-    color: var(--c-fg);
-  }
-
   html.dark {
-    --c-bg: #212129;
-    --c-fg: #ddddf0;
     --c-scroll: #333333;
     --c-scroll-hover: #555555;
-  }
-
-  main {
-    max-width: 70ch;
-    margin: 0 auto;
-    padding: 6rem 2rem 4rem;
+    --c-shadow: #ffffff08;
   }
 
   ::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+    width: 4px;
+    height: 4px;
   }
   ::-webkit-scrollbar-thumb {
     background-color: var(--c-scroll);
-    border-radius: 4px;
   }
   ::-webkit-scrollbar-thumb:hover {
     background-color: var(--c-scroll-hover);
   }
-  ::-webkit-scrollbar-track {
-    background-color: var(--c-bg);
+
+  ::selection {
+    background: rgba(0, 0, 0, 0.12);
+  }
+  .dark ::selection {
+    background: rgba(255, 255, 255, 0.12);
   }
 </style>
 
 <script>
-const initTheme = () => {
-  const darkSchema
+(function() {
+  const prefersDark
     = window.matchMedia
     && window.matchMedia('(prefers-color-scheme: dark)').matches
-  const storageTheme = localStorage.getItem('theme')
-  if (storageTheme) {
-    document.documentElement.classList.toggle(
-      'dark',
-      storageTheme === 'dark',
-    )
-  } else {
-    document.documentElement.classList.toggle('dark', darkSchema)
-  }
-}
-
-initTheme()
+  const setting = localStorage.getItem('theme') || 'auto'
+  if (setting === 'dark' || (prefersDark && setting !== 'light'))
+    document.documentElement.classList.toggle('dark', true)
+})()
 </script>
