--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,36 +1,23 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-import Generator from '../components/Generator'
-import '../message.css'
-import 'katex/dist/katex.min.css'
-import 'highlight.js/styles/atom-one-dark.css'
+import Layout from '@/layouts/Layout.astro'
+import Main from '@/components/Main.astro'
+import ConversationSidebar from '@/components/conversations/ConversationSidebar'
+import Settings from '@/components/settings/SettingsSidebar'
+import ModalsLayer from '@/components/ModalsLayer'
+import Sidebar from '@/components/ui/Sidebar'
+import BuildStores from '@/components/client-only/BuildStores'
 ---
 
-<Layout title="ChatGPT API Demo">
-  <main >
-    <Header />
-    <Generator client:load />
-    <Footer />
-  </main>
+<Layout title="ChatGPT Api Demo">
+  <div class="h-100dvh w-screen flex">
+    <Sidebar direction="left" class="hidden md:block">
+      <ConversationSidebar client:load />
+    </Sidebar>
+    <Main />
+    <Sidebar direction="right" class="hidden lg:block">
+      <Settings client:only />
+    </Sidebar>
+  </div>
+  <ModalsLayer client:only />
+  <BuildStores client:only />
 </Layout>
-
-<script>
-async function checkCurrentAuth() {
-  const password = localStorage.getItem('pass')
-  const response = await fetch('/api/auth', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({
-      pass: password,
-    }),
-  })
-  const responseJson = await response.json()
-  if (responseJson.code !== 0)
-    window.location.href = '/password'
-}
-checkCurrentAuth()
-</script>
